--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -47,8 +47,11 @@ jobs:
           uses: golangci/golangci-lint-action@v6
           with:
             version: v1.55.2
-            run: golangci-lint run
             working-directory: src/product-catalog
+
+        - name: Run golangci-lint
+          run: golangci-lint run
+          working-directory: src/product-catalog
 
     docker:
         runs-on: ubuntu-latest
